--- a/client/assets/_base.scss
+++ b/client/assets/_base.scss
@@ -1,36 +1,38 @@
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Lobster+Two&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script&family=Lobster+Two&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap");
 
-$yellow: #FFCD02;
+$yellow: #ffcd02;
 $green: #2a9d8f;
 $purple: #9856d6;
-$light-purple: #E0C5F8;
+$light-purple: #e0c5f8;
 $orange: #e76f51;
 $black: #333;
-$light-blue: #D9F1FF;
-$blue: #4EB3EC;
-$red: #EC3750;
+$light-blue: #d9f1ff;
+$semi-blue: #a4d7f0;
+$blue: #4eb3ec;
+$red: #ec3750;
 $light_gray: #e9e9e9;
 $gray: #c4c4c4;
 
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    // user-select: none;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  user-select: none;
 }
 
-input, button {
-    outline: none;
-    border: none;
-    border-radius: 0.4rem;
+input,
+button {
+  outline: none;
+  border: none;
+  border-radius: 0.4rem;
 }
 
 a {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
 
 a:hover {
-    text-decoration: underline;
+  text-decoration: underline !important;
 }
